# torch-dataset

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: main.yml
tests/: test_classification.py  test_detection.py
tests/fixtures/: dataset_classification-valid.json  dataset_detection-valid.json
torch_dataset/: __init__.py  classification.py  detection.py
