[tool.poetry]
name = "torch-dataset"
version = "0.1.0"
description = "Dataset implementations for PyTorch."
authors = ["Tomoya Kose <tomoya@mitsuse.jp>"]
license = "MIT"
packages = [
    {include = "torch_dataset"}
]
    

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.4.0"
torchvision = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
mypy = "^0.761"
ptpython = "^3.0.1"
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
